--- a/package.json
+++ b/package.json
@@ -1,22 +1,14 @@
 {
-  "name": "nextra-docs-template",
+  "name": "faast-rt-docs",
   "version": "0.0.1",
-  "description": "Nextra docs template",
+  "description": "The official documentation repository for Faast",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "eslint --cache --ignore-path .gitignore --max-warnings 0 .",
+    "lint:prettier": "prettier --cache --check --ignore-path .gitignore --ignore-path .prettierignore ."
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/shuding/nextra-docs-template.git"
-  },
-  "author": "Shu Ding <g@shud.in>",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/shuding/nextra-docs-template/issues"
-  },
-  "homepage": "https://github.com/shuding/nextra-docs-template#readme",
   "dependencies": {
     "next": "^13.0.6",
     "nextra": "latest",
@@ -29,6 +21,30 @@
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.3",
-    "typescript": "^4.9.3"
-  }
+    "typescript": "^4.9.3",
+    "@ianvs/prettier-plugin-sort-imports": "4.1.0",
+    "@next/eslint-plugin-next": "13.5.4",
+    "@typescript-eslint/eslint-plugin": "6.7.4",
+    "@typescript-eslint/parser": "6.7.4",
+    "eslint": "8.51.0",
+    "eslint-config-prettier": "9.0.0",
+    "eslint-plugin-import": "2.28.1",
+    "eslint-plugin-react": "7.33.2",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-tailwindcss": "3.13.0",
+    "eslint-plugin-typescript-sort-keys": "3.0.0",
+    "eslint-plugin-unicorn": "48.0.1",
+    "prettier": "3.0.3",
+    "prettier-plugin-pkg": "0.18.0",
+    "prettier-plugin-tailwindcss": "0.5.5"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/faast-rt/docs.git"
+  },
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/faast-rt/docs/issues"
+  },
+  "homepage": "https://github.com/faast-rt/docs#readme"
 }
