--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint:prettier": "prettier --cache --check --ignore-path .gitignore --ignore-path .prettierignore ."
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
     "next": "^13.0.6",
     "nextra": "latest",
     "nextra-theme-docs": "latest",
@@ -18,15 +19,12 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/node": "18.11.10",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.3",
-    "typescript": "^4.9.3",
     "@ianvs/prettier-plugin-sort-imports": "4.1.0",
     "@next/eslint-plugin-next": "13.5.4",
+    "@types/node": "18.11.10",
     "@typescript-eslint/eslint-plugin": "6.7.4",
     "@typescript-eslint/parser": "6.7.4",
+    "autoprefixer": "^10.4.16",
     "eslint": "8.51.0",
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-import": "2.28.1",
@@ -35,9 +33,12 @@
     "eslint-plugin-tailwindcss": "3.13.0",
     "eslint-plugin-typescript-sort-keys": "3.0.0",
     "eslint-plugin-unicorn": "48.0.1",
+    "postcss": "^8.4.31",
     "prettier": "3.0.3",
     "prettier-plugin-pkg": "0.18.0",
-    "prettier-plugin-tailwindcss": "0.5.5"
+    "prettier-plugin-tailwindcss": "0.5.5",
+    "tailwindcss": "^3.3.3",
+    "typescript": "^4.9.3"
   },
   "repository": {
     "type": "git",
