--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ianvs/prettier-plugin-sort-imports": "4.1.0",
     "@next/eslint-plugin-next": "13.5.4",
     "@types/node": "18.11.10",
+    "@types/react": "^18.2.31",
     "@typescript-eslint/eslint-plugin": "6.7.4",
     "@typescript-eslint/parser": "6.7.4",
     "autoprefixer": "^10.4.16",
